--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
 <body>
 	<h1>Grace Hopper</h1>
 	<h2>Bio</h2>
+		<p>Grace Murray Hopper nació en Nueva York el 9 de diciembre de 1906 en el seno de una familia en la que los estudios se consideraban como algo fundamental <br>para el desarrollo de la persona, y en la que se consideraba que los varones y las mujeres debían tener las mismas oportunidades.</p>
+	<ul>
+		<li>Cocinar</li>
+		<li>Programar</li>
+	<ul type="circle">
+		<li>Javascript</li>
+		<li>Ruby</li>
+		<li>Java</li>
+	</ul>
+		<li>Enseñar</li>
+	</ul>
+	<h2>3 Sueños que tengo</h2>
+	<ol>
+		<li>Viajar por el mundo</li>
+		<li>Ver a Laboratoria en todos los paises</li>
+		<li>Que todas aprendan a codear</li></ol>
+	<div>
+
+	<img src="imagen/gh.gif">
 </body>
 </html>
